# rust_embassy_stm32h723zgt6_w25q128

./: Cargo.toml  README.md  TUT.md
examples/: basic_usage.rs
src/: lib.rs  w25q128jv.rs
