[package]
name = "w25q128"
version = "0.1.3"
edition = "2024"
authors = ["linkyourbin <ybinlew@gmail.com>"]
description = "A driver for W25Q128 flash memory chips, using Embassy framework"  
license = "MIT"
repository = "https://github.com/linkyourbin/rust_embassy_stm32h723zgt6_w25q128"


[[bin]]
path = "examples/basic_usage.rs"
name = "w25q128"
test = false
bench = false

[lib]
name = "w25q128"
path = "src/lib.rs"

[dependencies]
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "stm32h723zg", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.1"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.0", default-features = false }
nb = "1.1.0"
static_cell = "2.1.0"



[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
# opt-level = "s"         # 
overflow-checks = false
lto = "fat"
